@startuml er-diagram

skinparam linetype ortho

entity "users" as user_table {
  *id : INTEGER <<PK>>
  --
  *telegram_id : BIGINT <<UNIQUE>>
  *name : VARCHAR
  *user_type : VARCHAR <<ENUM>> -- student, tutor
  *created_at : TIMESTAMP
}

entity "orders" as order_table {
  *id : INTEGER <<PK>>
  --
  *student_id : INTEGER <<FK>>
  tutor_id : INTEGER <<FK>>
  subject_id : INTEGER <<FK>>
  status_id : INTEGER <<FK>>
  description : TEXT
  price : INTEGER
  *created_at : TIMESTAMP
}

entity "order_status" as status_table {
  *id : INTEGER <<PK>>
  --
  *name : VARCHAR <<ENUM>> -- Created, Accepted, Completed
}

entity "subjects" as subject_table {
  *id : INTEGER <<PK>>
  --
  *name : VARCHAR
}

entity "reviews" as review_table {
  *id : INTEGER <<PK>>
  --
  *order_id : INTEGER <<FK>>
  *rating : INTEGER
  *comment : TEXT
  *created_at : TIMESTAMP
}

order_table ||--o{ user_table : "student_id"
order_table ||--o{ user_table : "tutor_id"
order_table ||--o{ subject_table : "subject_id"
order_table ||--o{ status_table : "status_id"
review_table ||--o{ order_table : "order_id"

@enduml
